# Job-application

./: .env.example  README.md  pyproject.toml
src/job_agent/: __init__.py  agent.py  config.py  main.py  matching.py  models.py  profile.py  ui.py
tests/: test_agent.py  test_matching.py  test_profile.py
